--- a/test.css
+++ b/test.css
@@ -81,6 +81,8 @@ nav ul li
         display: -ms-flexbox;
         justify-content: center;
         flex-wrap: wrap;
+        -webkit-transition: width .5s; /* Safari */
+        transition: width .5s;
     }
 
     article {
@@ -91,6 +93,17 @@ nav ul li
     aside {
         width: 30%;
         float: left;
+
+    }
+
+    .sidebar-hidden {
+        -ms-transform: opacity .5s ease-in-out; /* IE 9 */
+        -webkit-transform: opacity .5s ease-in-out; /* Safari */
+        transform: opacity .5s ease-in-out; /* Standard syntax */
+    }
+
+    .full-width{
+        width: 100%;
     }
 
 }
